<resources>
    <string name="app_name">InClass Assessment 02</string>
    <string name="MainTitle">BMI Calculator</string>
    <string name="TextViewWeight">Weight:</string>
    <string name="TextViewHeight">Height:</string>
    <string name="Default">N/A</string>
    <string name="set">Set</string>
    <string name="BMI">Your BMI:</string>
    <string name="BMIValue">0.00</string>
    <string name="viewProfile">View Profile</string>
    <string name="reset">Reset</string>
    <string name="registrationTitle"><![CDATA[Set Weight & Height ]]></string>
    <string name="cancel">cancel</string>
    <string name="submit">submit</string>
    <string name="weightlb">Weight (lbs):</string>
    <string name="Heightin">Height(inches):</string>
    <string name="hintWeight">Enter Weight</string>
    <string name="hintHeight">Enter Height</string>
    <string name="heightVal" />
    <string name="weightVal" />
    <string name="Profiletitle">Profile</string>
</resources>